fix contrast issue

--- a/src/styles/_themes.scss
+++ b/src/styles/_themes.scss
@@ -5,7 +5,7 @@
 // Lumen (Light)
 $theme-lumen: (
   primary: #0049db,
-  primary-on-surface: #337aff,
+  primary-on-surface: #06224d,
   primary-hover: #0057ff,
   background: #ffffff,
   surface: #f7f9fb,
